--- a/src/app/lot-detail/lot-detail.component.html
+++ b/src/app/lot-detail/lot-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="lot">
   <app-lot-summary-card [lot]="lot"></app-lot-summary-card>
 
   <mat-card>
